force-app/main/default/objects/marketevents__c/marketevents__c.object-meta.xml
<CustomObject>
    <description>To hold the records related to market events.</description>
    <label>MarketEvent</label>
    <nameField>
        <label>Market Event</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MarketEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>