force-app/main/default/objects/marketevents__c/fields/CreatedDateTime__c.field-meta.xml
<CustomField>
    <fullName>CreatedDateTime__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <description>Date time of event creation</description>
    <label>CreatedDateTime</label>
    <type>DateTime</type>
</CustomField>