force-app/main/default/objects/marketevents__c/fields/IAValue__c.field-meta.xml
<CustomField>
    <fullName>IAValue__c</fullName>
    <label>IAValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>