force-app/main/default/objects/marketevents__c/fields/ImpactedArea__c.field-meta.xml
<CustomField>
    <fullName>ImpactedArea__c</fullName>
    <label>ImpactedArea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>