force-app/main/default/objects/marketevents__c/fields/InteractionId__c.field-meta.xml
<CustomField>
    <fullName>InteractionId__c</fullName>
    <description>To store unique interaction id whenever any market event news arrive</description>
    <label>InteractionId</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>