force-app/main/default/objects/marketevents__c/fields/RiskOppFlag__c.field-meta.xml
<CustomField>
    <fullName>RiskOppFlag__c</fullName>
    <label>RiskOppFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>