force-app/main/default/objects/marketevents__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>Category__c</columns>
    <columns>ConfidenceScore__c</columns>
    <columns>RiskOppFlag__c</columns>
    <columns>ImpactedArea__c</columns>
    <columns>IAValue__c</columns>
    <columns>InteractionId__c</columns>
    <columns>ProcessedFlag__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>